CHANGELOG

2011-04-25 1.4.0 Add memoize and :reload => true
2011-04-19 1.3.4 Add self and more tests
2011-04-18 1.3.2 Update for Ruby 1.9.2 and Rails 3.0.5