@@ -1,1 +1,0 @@
-8e02426705de479314d5b4c3735b9a74c41240e74aa890502286892a77c71c9180653ca1bae75955b18469dab815fd403206dd9f42c3531b657938d1018a67dc  sixarm_ruby_current_user-1.4.0.gem
