@@ -1,0 +1,1 @@
+baf3896e280395bd0dd9f1217057a6ce3bc53eafea8486ec1b7b99ceffb08dc197049ac2186bad8b276c5ebda006a5f6df4214177ac711a3f20d6313820d7717  sixarm_ruby_current_user-1.4.4.gem
