@@ -2,7 +2,7 @@ Gem::Specification.new do |s|
 
   s.name              = "sixarm_ruby_current_user"
   s.summary           = "SixArm.com » Ruby » CurrentUser module for Ruby On Rails to get and set a user in a session"
-  s.version           = "1.4.0"
+  s.version           = "1.4.4"
   s.author            = "SixArm"
   s.email             = "sixarm@sixarm.com"
   s.homepage          = "http://sixarm.com/"
@@ -20,7 +20,6 @@ Gem::Specification.new do |s|
   s.files             = top_files + lib_files + test_files
   s.test_files        = test_files
 
-  s.add_dependency('sixarm_ruby_current_user_id', '= 1.4.0')  
   s.add_dependency('sixarm_ruby_active_record_mock', '>= 1.4.4') # test
 
 end
